Bug 141854 - Crash in: mergedlo.dll
Summary: Crash in: mergedlo.dll
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha1+
Hardware: All Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.2.0 target:7.1.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-04-23 18:12 UTC by Andreas Säger
Modified: 2021-04-30 09:04 UTC (History)
1 user (show)

See Also:
Crash report or crash signature: ["mergedlo.dll"]


Attachments
Various office documents and external hsql database with driver (1.53 MB, application/x-zip-compressed)
2021-04-23 18:12 UTC, Andreas Säger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Säger 2021-04-23 18:12:26 UTC
Created attachment 171373 [details]
Various office documents and external hsql database with driver

This bug was filed from the crash reporting server and is br-522a4993-fc1c-471a-8565-adde313c9ba3.
=========================================
The attached zip is a database application with Basic and Python macros bundled with an external HSQLDB and a driver.
1) Extract to a trusted folder.
2) Open the database document Todo.odb. It runs an auto-install macro which connects the database document to its database and registers the database as "Todo". After the success message, close the database document.
3) You may open the two Writer documents Macro_AutoRefresh.odt and Macro_DoneForm.odt which provide push buttons to install some Python code. You can reproduce the crash even when these macros are not installed. Just accept the error messages about missing macro code.
4) Open DONE.odt and close it. If the database connection was established, both LO 7.0 and 7.1 crash on Windows whereas a very similar document used to work on our local Windows network since LO4 until LO 6.4. I can prevent the crash when I switch the document into Edit mode and then into form design mode in order to release the database connection before closing the document.
Comment 1 Andreas Säger 2021-04-23 18:51:40 UTC
P.S. no problem under Linux (Ubuntu 18.4).
Comment 2 Mike Kaganski 2021-04-24 14:00:08 UTC
Regression after https://git.libreoffice.org/core/+/8477bbf8d6867e656b8132f0ddd682d08590a547.

In testing, I only used steps 1, 2 (once, allowing macros), and 4 (each time rejecting macros). Step 3 in not required. After each opening, I closed the document (not application) as soon as it opened, using the small cross at the right side of the menu bar.
Comment 3 Caolán McNamara 2021-04-25 19:48:18 UTC
Not seeing it under gen, I guess I'll have to try under windows. Is there any backtrace with symbols identifying a concrete crash location ?
Comment 4 Commit Notification 2021-04-27 14:49:56 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/aea139c440d7c7a3683fcbbc48799bc79ba590e7

tdf#141854 Resize called during dispose

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Andreas Säger 2021-04-29 17:58:46 UTC
Yep, the problem seems to be fixed in 7.2alpha0
Thank you very much!
Comment 6 Caolán McNamara 2021-04-29 19:37:30 UTC
I'll call that fixed then and backport to 7-1 in gerrit
Comment 7 Commit Notification 2021-04-30 09:04:35 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/d38c5abbb0a34159fc13ef86269fbff3a93c3109

tdf#141854 Resize called during dispose

It will be available in 7.1.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.