tdf#141854 Resize called during dispose

Change-Id: Ie5eaafa95704f9567b8bb9881865571a39bb2f6b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/114708
Tested-by: Jenkins
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit aea139c440d7c7a3683fcbbc48799bc79ba590e7)