vcl/source/window/window2.cxx
@@ -1348,7 +1348,7 @@ void Window::queue_resize(StateChangedType eReason)
         }
     }
 
-    if (bSomeoneCares && !mpWindowImpl->mbInDispose)
+    if (bSomeoneCares && !isDisposed())
     {
         //fdo#57090 force a resync of the borders of the borderwindow onto this
         //window in case they have changed
